--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,4 +14,5 @@ body {
   /* background-repeat: no-repeat; */
   /* box-sizing: border-box; */
   background-size: cover;
+  overflow-x: hidden;
 }
