--- a/client/src/compenents/navbar/navbar.css
+++ b/client/src/compenents/navbar/navbar.css
@@ -10,6 +10,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  z-index: 110;
 }
 
 .logoContainer {
@@ -44,9 +45,9 @@
   );
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   height: 100vh!important;
-  width: 2vw !important;
+  width: 1.8vw !important;
   overflow: auto;
-
+  z-index: 100;
 }
 
 .sidebar:hover {
