--- a/client/src/compenents/Cards/Cards.css
+++ b/client/src/compenents/Cards/Cards.css
@@ -32,9 +32,11 @@
 }
 
 .CardDescrtion {
-    color: white;
+    color: gold;
     font-size: 25px;
     margin-left: 5px;
+    display: flex;
+    flex-direction: row;
 }
 
 .cardInfos {
@@ -52,7 +54,7 @@
 .cardChoice {
     position: relative;
     width: 100%;
-    top: -24%;
+    top: -16.5%;
     z-index: 99;
     display: flex;
     flex-direction: row;
