--- a/client/src/components/signin/signin.css
+++ b/client/src/components/signin/signin.css
@@ -80,7 +80,7 @@
 }
 
 .loginInputLabel {
-  color: grey !important;
+  color: #DAD6D5 !important;
 }
 .loginInput {
   color: aliceblue !important;
