--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -119,7 +119,29 @@
   right: -10px;
   top: 10px;
 }
- 
+
+.MapContainer {
+  height: 45vh!important;
+  /* width: 100%!important; */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+.DoneContainer {
+  height: 25vh!important;
+  text-align: center;
+}
+
+.map {
+  height: 45vh!important;
+  width: 45vh!important;
+  position: relative;
+  left:870px
+}
+
+.doneImg {
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: 1280px) {
   .profileImageContainer {
     border-top-left-radius: 30px;
