--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -57,8 +57,9 @@
 }
 
 .infosContainer {
-  margin-bottom: 2vh!important;
-  height: 45vh;
+  /* border: 1px solid yellow; */
+  margin-top: 5vh!important;
+  height: 35vh;
 }
 
 .profileImage {
