--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -1,11 +1,10 @@
-
 .profilContainer {
   height: 100vh;
 }
 
 .profileContainer {
   border-radius: 30px;
-  height: 50vh!important;
+  height: 50vh !important;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   animation: slideRight 0.8s;
 }
@@ -25,27 +24,33 @@
     143deg,
     rgba(254, 107, 139, 1) 0%,
     rgba(255, 137, 91, 1) 100%
-    );
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    height: 50vh!important;
-    border: 1px solid yellow;
+  );
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  height: 50vh !important;
+  padding: 10px!important;
 }
 
+.profileUserImage {
+  height: 60%;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
 .profileInputContainer {
   background: rgb(65, 64, 65);
   background: linear-gradient(
     143deg,
     rgba(65, 64, 65, 1) 0%,
     rgba(30, 29, 32, 1) 69%
-  );
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
+    );
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  
 .profileImage {
   width: 70%;
   height: auto;
@@ -53,7 +58,7 @@
   transition: width 1s;
 }
 
-.profileImageContainer:hover .profileImage{
+.profileImageContainer:hover .profileImage {
   width: 90%;
 }
 
@@ -66,7 +71,6 @@
     opacity: 1;
   }
 }
-
 
 .profileInput {
   color: white;
@@ -89,7 +93,7 @@
 }
 
 .profileInputLabel {
-  color: #DAD6D5 !important;
+  color: #dad6d5 !important;
 }
 .profileInput {
   color: aliceblue !important;
@@ -101,13 +105,13 @@
     border-top-right-radius: 30px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    padding: 30px!important;
+    padding: 30px !important;
   }
-  
+
   .profileInputContainer {
     border-top-right-radius: 0;
     border-bottom-right-radius: 30px;
     border-bottom-left-radius: 30px;
-    padding: 30px!important;
+    padding: 30px !important;
   }
 }
