--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -4,7 +4,7 @@
 
 .profileContainer {
   border-radius: 30px;
-  height: 50vh !important;
+  height: 70vh !important;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   animation: slideRight 0.8s;
 }
@@ -28,12 +28,12 @@
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  height: 50vh !important;
+  height: 100% !important;
   padding: 10px!important;
 }
 
 .profileUserImage {
-  height: 60%;
+  height: 40%;
   width: 100%;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
