user profile compenent

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -6,7 +6,7 @@
     rgba(30, 29, 32, 1) 69%
   );
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  height: 7vh;
+  height: auto;
   width: 100%;
   margin: 0;
   padding: 0;
