--- a/client/src/components/Cards/Cards.css
+++ b/client/src/components/Cards/Cards.css
@@ -1,7 +1,7 @@
 .card {
     width: 300px;
     height: 370px;
-    background: transparent;
+    background: transparent!important;
     border-radius: 10px;
     background-size: cover;
     background-position: center center;
