--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -33,7 +33,7 @@
 }
 
 .profileUserImage {
-  height: 40%;
+  height: 50%;
   width: 100%;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -100,6 +100,9 @@
 }
 
 @media screen and (max-width: 1280px) {
+  .body {
+    overflow: none;
+  }
   .profileImageContainer {
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
